<resources>
    <string name="app_name">Werewolf</string>

    <string name="role_werewolf_name">Werewolf</string>
    <string name="role_werewolf_goal">Take over the village</string>
    <string name="role_villager_name">Villager</string>
    <string name="role_villager_goal">Defend the village</string>
    <string name="role_seer_name">Seer</string>
    <string name="role_seer_goal">Find the werewolves</string>
    <string name="role_doctor_name">Doctor</string>
    <string name="role_doctor_goal">Heal the innocent</string>
    <string name="role_hunter_name">Hunter</string>
    <string name="role_hunter_goal">Shoot a werewolf</string>
    <string name="role_witch_name">Witch</string>
    <string name="role_witch_goal">Heal once, poison once</string>
    <string name="role_priest_name">Priest</string>
    <string name="role_priest_goal">Burn one werewolf</string>
    <string name="role_amor_name">Amor</string>
    <string name="role_amor_goal">Choose a love couple</string>
    <string name="role_drunk_name">Drunk</string>
    <string name="role_drunk_goal">2 lives, vote only in the first one</string>

    <string name="touch_to_reveal_role">Touch to reveal role</string>
    <string name="hand_to_next_player">Hand device to next player</string>

    <string name="cnf_player_count_label">Number of Players</string>
    <string name="cnf_werewolf_count_label">Werewolves</string>
    <string name="cnf_villager_count_label">Villagers</string>
    <string name="cnf_seer_count_label">Seers</string>
    <string name="cnf_doctor_count_label">Doctors</string>
    <string name="cnf_hunter_count_label">Hunters</string>
    <string name="cnf_witch_count_label">Witches</string>
    <string name="cnf_priest_count_label">Priests</string>
    <string name="cnf_amor_count_label">Amors</string>
    <string name="cnf_drunk_count_label">Drunks</string>
    <string name="cnf_auto_assign_label">Auto assign roles</string>
    <string name="cnf_start_btn_label">Start Game</string>
    <string name="cnf_x_players_unassigned">%1$d players unassigned</string>
    <string name="cnf_add_new_role">Add New role</string>
    <string name="cnf_add_new_role_hint">Role name</string>

    <string name="player_x_of_y">Player %1$d of %2$d</string>
    <string name="change_player_name">Change player name</string>
    <string name="default_player_name">Player %1$d</string>
    <string name="change_player_name_hint">Player name</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_duplicate_name">Name already exists</string>
    <string name="error_empty_role">Role cannot be empty</string>
    <string name="error_duplicate_role">Role already exists</string>

    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>

    <string name="all_players">All players</string>

    <string name="love_message">Made by a small team of night time coders.\nThanks for your support!</string>

</resources>
