<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_werewolf"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/btn_continue_game"
            android:layout_width="match_parent"
            android:text="@string/continue_game"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_accent"
            android:textColor="@android:color/white"
            />


        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:background="@drawable/selector_accent"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/margin_default"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_heart"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/love_message"
            android:textSize="10sp"
            android:textColor="@color/disabled"
            />

    </LinearLayout>


</RelativeLayout>
